# umanux

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: rust.yml
src/: api.rs  error.rs  lib.rs  passwd.rs  shadow.rs  userlib.rs  userlib_error.rs
src/api/: createuser_args.rs  deleteuser_args.rs  mod.rs  newuser_args.rs
src/group/: mod.rs
src/user/: gecos_fields.rs  mod.rs  passwd_fields.rs  shadow_fields.rs
src/userlib/: files.rs  hashes.rs  mod.rs
tests/: create_user_test.rs  delete_user_test.rs  testfiles.rs
tests/fixtures/: group  passwd  shadow
