[package]
name = "adduser"
version = "0.1.0"
description = "Library for managing Linux users and their directories"
authors = ["Dietrich <dietrich@teilgedanken.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["user", "admin", "linux", "manage"]
categories = ["system-tools", "system-tools::user-management"]
repository = "https://git.teilgedanken.de/Rust/useradd/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4"
log = "0.4"
simplelog = "0.8"
chrono = "0.4"
env_logger = "0.8"
derive_builder = "0.9"

[dev-dependencies]
tempfile = "3.1"