[package]
name = "umanux"
version = "0.1.1"
description = "Library for managing Linux users and their directories"
authors = ["Dietrich <dietrich@teilgedanken.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["user", "admin", "linux", "manage", "passwd"]
categories = ["os", "os::linux-apis", "parser-implementations", "command-line-utilities"]
repository = "https://github.com/umanux/umanux"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4"
log = "0.4"
simplelog = "0.8"
chrono = "0.4"
env_logger = "0.8"
derive_builder = "0.9"
clap = "3.0.0-beta"

[dev-dependencies]
tempfile = "3.1"
test_bin= "0.3"


# optimize for size at cost of compilation speed.
[profile.release]
lto = true
codegen-units = 1